doc/grammar.txt
program         -> {decl} $

decl            -> vardecl
                 | stmt
                 
vardecl         -> VAR ID ( '=' bool );

stmt            -> bool ;
                 | assign
                 | block
                 | if

if              -> IF '(' bool ')' stmt if_tail
if_tail         -> ELSE stmt
                 | &

assign          -> ID '=' bool ;

block           -> '{' {(vardecl | stmt)} '}'

bool            -> join bool_tail 
bool_tail       -> '||' join bool_tail 
                 | &

join            -> equality join_tail
join_tail       -> '&&' equality join_tail
                 | &

equality        -> rel equality_tail
equality_tail   -> '==' rel equality_tail
                 | '!=' rel equality_tail
                 | &

rel             -> expr rel_tail
rel_tail        -> '<' expr rel_tail
                 | '>' expr rel_tail
                 | '<=' expr rel_tail
                 | '>=' expr rel_tail
                 | &

expr            -> term expr_tail
expr_tail       -> '+' term expr_tail 
                 | '-' term expr_tail 
                 | &

term            -> unary term_tail 
term_tail       -> '*' unary term_tail 
                 | '/' unary term_tail 
                 | &

unary           -> ['!']['-']factor

factor          -> '(' expr ')'
                 | ID
                 | TRUE | FALSE
                 | [0-9]
